# WZC

./: .gitignore
docs/: atomic_groups.md  basicconstraints.md  basics.md  constraints.md  database.md  dbdata.md  lessondata.md  lessonplacement.md  local_constraints.md
tt01/: CMakeLists.txt  canvas.cpp  canvas.h  chip.cpp  chip.h  database.cpp  database.h  fetdata.cpp  fetdata.h  lessontiles.cpp  lessontiles.h  main.cpp  readfet.cpp  readfet.h  readspaceconstraints.cpp  readspaceconstraints.h  readtimeconstraints.cpp  readxml.cpp  readxml.h  showclass.cpp  showclass.h  showroom.cpp  showteacher.cpp  tile.cpp  tile.h  tt_grid.cpp  tt_grid.h  viewhandler.cpp  viewhandler.h
tt02/: CMakeLists.txt  basicconstraints.cpp  basicconstraints.h  canvas.cpp  canvas.h  chip.h  database.cpp  database.h  differentdays.cpp  differentdays.h  fetdata.cpp  fetdata.h  lessoninsertionconflict.cpp  lessoninsertionconflict.h  lessontiles.cpp  localconstraints.cpp  localconstraints.h  main.cpp  placelesson.cpp  placelesson.h  randomnumbers.h  readspaceconstraints.cpp  readtimeconstraints.cpp  readtimeconstraints.h  readxml.cpp  samestartingtime.cpp  samestartingtime.h  showclass.cpp  showclass.h  showroom.cpp  showroom.h  showteacher.cpp  showteacher.h  softactivitytimes.cpp  softactivitytimes.h  statecache.cpp  statecache.h  tiledata.cpp  tiledata.h  timeconstraints1.cpp  (+7 more)
tt02/tmp/: tt_grid.cpp  tt_grid.h
tt02/with_roaring/: use_roaring.cpp  use_roaring.h
